# SpecSplit

./: .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
api/core/: index.html
api/draft/: index.html
api/orchestrator/: index.html
architecture/: index.html
benchmarks/: analyze_results.py  index.html  legacy_harness.py  run.sh  runner.py
benchmarks/results/: per_round.csv  summary.csv  tabulargenerator.py
benchmarks/results/raw/: gamma12_code-001_1773961964204.json  gamma12_code-002_1773962064448.json  gamma12_factual-001_1773961250108.json  gamma12_factual-002_1773961324599.json  gamma12_generation-001_1773961786273.json  gamma12_generation-002_1773961872484.json  gamma12_instruct-001_1773961402416.json  gamma12_instruct-002_1773961494565.json  gamma12_longform-001_1773962165862.json  gamma12_reasoning-001_1773961592331.json  gamma12_reasoning-002_1773961685976.json  gamma1_code-001_1773958780490.json  gamma1_code-002_1773958805112.json  gamma1_factual-001_1773956595838.json  gamma1_factual-002_1773958340170.json  gamma1_generation-001_1773958729481.json  gamma1_generation-002_1773958755226.json  gamma1_instruct-001_1773958622655.json  gamma1_instruct-002_1773958648972.json  gamma1_longform-001_1773958832138.json  gamma1_longform-002_1773958860253.json  gamma1_reasoning-001_1773958675710.json  gamma1_reasoning-002_1773958702551.json  gamma3_code-001_1773959283690.json  gamma3_code-002_1773959362775.json  gamma3_factual-001_1773958886176.json  gamma3_factual-002_1773958948783.json  gamma3_generation-001_1773959178594.json  gamma3_generation-002_1773959223343.json  gamma3_instruct-001_1773959009470.json  gamma3_instruct-002_1773959057463.json  gamma3_longform-001_1773959398361.json  gamma3_longform-002_1773959433786.json  gamma3_reasoning-001_1773959091117.json  gamma3_reasoning-002_1773959134007.json  gamma5_code-001_1773959964993.json  gamma5_code-002_1773960016415.json  gamma5_factual-001_1773956248575.json  gamma5_factual-002_1773956326659.json  gamma5_factual-003_1773956405756.json  (+22 more)
docs/: architecture.md  experiments.md  index.md  project_guide.md  testing.md
docs/api/: core.md  draft.md  index.md  orchestrator.md  target.md
docs/benchmarks/: README.md
docs/proto/: README.md
docs/specsplit/core/: README.md
docs/specsplit/workers/draft/: README.md
docs/specsplit/workers/orchestrator/: README.md
docs/tests/: README.md
experiments/: index.html
project_guide/: index.html
proto/: index.html
scripts/: benchmark_run.py  manage_remote_worker.sh  patch_proto_imports.py  remote_worker.draft.env.example  remote_worker.target.env.example  start_documentation.md
search/: search_index.json
specsplit/: __init__.py
specsplit/core/: __init__.py  cache_utils.py  config.py  index.html  model_loading.py  serialization.py  telemetry.py  verification.py
specsplit/proto/: __init__.py  spec_decoding.proto
specsplit/workers/: __init__.py
specsplit/workers/draft/: __init__.py  engine.py  index.html  service.py
specsplit/workers/orchestrator/: __init__.py  client.py  index.html  pipeline.py  vocab_bridge.py
testing/: index.html
tests/: __init__.py  conftest.py  index.html
tests/integration/: __init__.py  test_e2e.py  test_exact_match.py  test_grpc_roundtrip.py
tests/unit/: __init__.py  test_config.py  test_draft_engine.py  test_orchestrator_logging.py  test_pipeline.py  test_serialization.py  test_target_engine.py  test_telemetry.py  test_tree_attn.py  test_verification.py
