[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specsplit"
version = "0.1.0"
description = "Disaggregated Speculative Decoding — distributed draft/target LLM pipeline over gRPC"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Samvrit Srinath"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "grpcio-testing>=1.60.0",
    "mypy>=1.8.0",
    "mypy-protobuf>=3.5.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "types-protobuf>=4.25.0",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings[python]>=0.18",
]

[project.scripts]
specsplit-benchmark = "scripts.benchmark_run:main"

# ---------------------------------------------------------------------------
# Tool Configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
include = ["specsplit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring network or model initialization (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
